# CofeeEmployeeLearningBackend

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696
postgres-data/base/5/: 1247  1249  1259  1259_vm  16388  16391  16393  16394  16399  16400  16402  16404  2224  2579  2604  2606  2608  2610  2610_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
src/: app.py  config.py
src/alembic/: env.py
src/alembic/versions/: 0a823171345e_add_variant_answer_model.py  3cc79bc5cccf_initial_user.py  5164cfba140a_add_variant_answer_model.py  6561dfc67da4_add_tests_model.py  740a688d94fc_add_variant_answer_model.py  8dd762276cdb_add_variant_answer_model.py  953efede4100_add_variant_answer_model.py  c1f8a4b625ee_add_question_model.py  cfa8c14ca6da_add_variant_answer_model.py  d7b01945caf7_add_lecture.py  eda8a496666b_add_variant_answer_model.py  f26b171d2da1_add_variant_answer_model.py
src/api/: client.py
src/auth/: utils.py
src/certs/: private.pem  public.pem
src/exceprions/: auth.py
src/models/: user.py
src/repositories/: user.py
src/schemas/: user.py
src/services/: database.py  user.py
